@@ -1,0 +1,37 @@
+#include "traversal.hpp"
+
+namespace dsa {
+namespace traversal {
+
+	/// VERTEX-VERTEX
+
+	void path(const graph& G, node source, node target, boolean_path& p) {
+
+	}
+
+	void path(const graph& G, node source, node target, boolean_path_set& ps) {
+
+	}
+
+	/// VERTEX-ALL
+
+	void path(const graph& G, node source, vector<boolean_path>& ps) {
+
+	}
+
+	void path(const graph& G, node source, vector<boolean_path_set>& ps) {
+
+	}
+
+	/// ALL-ALL
+
+	void paths(const graph& G, vector<vector<boolean_path> >& all_all_paths) {
+
+	}
+
+	void paths(const graph& G, vector<vector<boolean_path_set> >& all_all_paths) {
+
+	}
+
+} // -- namespace traversal
+} // -- namespace dsa
